--- a/src/components/Page/styles.scss
+++ b/src/components/Page/styles.scss
@@ -1,9 +1,26 @@
 @import 'mixins';
+@import 'variables';
 @import 'burbon-css3-transition';
 @import 'burbon-addon-timing-functions';
 @import 'burbon-css3-animation';
 @import 'burbon-css3-backface-visibility';
 @import 'burbon-css3-transform';
+
+.page {
+  padding: 20px;
+}
+.page-full {
+  height: 100%;
+  padding: 0;
+}
+.page-core {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  padding: 60px 10px;
+  background-color: $slategray;
+  overflow: auto;
+}
 
 #content {
   padding-top: 45px;
