--- a/src/public/styles/bitmarket24.scss
+++ b/src/public/styles/bitmarket24.scss
@@ -1,3 +1,48 @@
+$spacingGapXL: 20px;
+$spacingGapInnerXL: 10px;
+$mediaBreakpointXsUp: 576px;
+
 a {
   cursor: pointer;
+}
+
+.bm-page {
+  display: flex;
+  flex-direction: column;
+  @media (min-width: $mediaBreakpointXsUp) {
+    flex-direction: row;
+  }
+  .bm-main-section {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 70%;
+    padding-right: $spacingGapInnerXL;
+
+    .bm-chart-container {
+      height: 300px;
+      margin-bottom: $spacingGapXL;
+    }
+
+    .bm-paired-tiles {
+      display: flex;
+      flex-direction: column;
+      @media (min-width: $mediaBreakpointXsUp) {
+        flex-direction: row;
+        .bm-tile:first-child {
+          margin-right: $spacingGapInnerXL;
+        }
+        .bm-tile:last-child {
+          margin-left: $spacingGapInnerXL;
+        }
+      }
+    }
+  }
+  .bm-right-section {
+    flex: 0 0 30%;
+    padding-left: $spacingGapInnerXL;
+  }
+  .bm-tile {
+    height: 100%;
+    flex: 1;
+  }
 }
