--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -1,8 +1,13 @@
 @import 'buttons';
+@import 'chat';
 @import 'dropdowns';
 @import 'form-elements';
 @import 'globals';
+@import 'thumbnails';
+// @import 'tiles';
+@import 'typography';
 
 @import 'bitmarket24';
 
+@import url(http://fonts.googleapis.com/css?family=Dosis:300,700|Ubuntu+Mono|Lato:300,400,700,300italic,400italic&subset=latin,latin-ext);
 @import url(http://fonts.googleapis.com/css?family=Dosis:300,700|Ubuntu+Mono|Lato:300,400,700,300italic,400italic&subset=latin,latin-ext);
